--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      table, th, td {
+        border:2px solid green;
+        width:150;
+        height:100;
+}
+     
+    </style>
+  </head>
+<body>
+  <table>
+    <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>  
+</body>
+</html>
