--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
 <body>
   <table>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th coldspan= "3"></th>
     </tr>
     <tr>
       <td></td>
+      <td></td>    
       <td></td>
-      <td></td>
+    <tr>
+      <td coldpsan= "3"></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td coldspan= "3"></td>
     </tr>
   </table>  
 </body>
