--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       table, th, td {
-        border:2px solid green;
+        border:2px solid green;"600
         width:150;
         height:100;
 }
@@ -14,6 +14,7 @@
   <table>
     <tr>
       <th coldspan= "3"></th>
+      <img src="https://github.com/Fartbum123/hello/blob/main/Clothing%20Company%20GoDaddy%20Store%20Image.png?raw=true" alt=" The best website in the world!" width="600" height="400"
     </tr>
     <tr>
       <td></td>
