--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <table>
     <tr>
-      <th coldspan= "3"></th>
-      <img src="https://github.com/Fartbum123/hello/blob/main/Clothing%20Company%20GoDaddy%20Store%20Image.png?raw=true" alt=" The best website in the world!" width="600" height="400"
+      <th coldspan= "3"><img src="https://github.com/Fartbum123/hello/blob/main/Clothing%20Company%20GoDaddy%20Store%20Image.png?raw=true" alt=" The best website in the world!" width="600" height="400"
+</th>
     </tr>
     <tr>
       <td></td>
