--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <table>
     <tr>
-      <th coldspan= "3"><img src="https://github.com/Fartbum123/hello/blob/main/Clothing%20Company%20GoDaddy%20Store%20Image.png?raw=true" alt=" The best website in the world!" width="600" height="400">
+      <th coldspan= "3"><img src="blob:chrome-untrusted://media-app/5342566c-61fe-4ee0-8422-f55020c453f0" alt=" The best website in the world!" width="600" height="400">
       </th>
     </tr>
     <tr>
