--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
   <table>
     <tr>
-      <th coldspan= "3"><img src="blob:chrome-untrusted://media-app/5342566c-61fe-4ee0-8422-f55020c453f0" alt=" The best website in the world!" width="600" height="400">
+      <td> coldspan= "3">
+        <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
+      </td>
       </th>
     </tr>
     <tr>
