--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      table, th, td {
-        border:200px solid green;"600
-        width:700;
-        height:500;
-}
-     
-    </style>
+    link 
   </head>
 <body>
   <table>
