--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    link 
-  </head>
-<body>
-  <table>
+    <link rel="stylesheet" href="style.css> 
+  </head> Best Website in the world
+<body>Welcome to the best website in the world
+  <table border="1">
     <tr>
       <td> coldspan= "3">
         <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
