--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
 <body>Welcome to the best website in the world
   <table border="1">
     <tr>
-      <td> coldspan= "3">
+      <td coldspan= "3">
         <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
       </td>
+    </tr>
+    <tr>
+    <td>
+    <a href="index.html">
+      <button style="height:150px;
+width:640px"><b>Button 1</b></button>
+</td>
     </tr>
   </table>  
 </body>
