--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <tr>
     <td>
     <a href="index.html">
-      <button style="height:150px;
-width:640px"><b>Button 1</b></button>
+      <button style="height:150px; width:640px"><b>Button 1</b></button>
+</td>
+<td>
+  <a href="page 2
+
 </td>
     </tr>
   </table>  
