--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css> 
-  </head> Best Website in the world
+  </head> 
+    <title>Best Website in the world</title>
 <body>Welcome to the best website in the world
   <table border="1">
     <tr>
@@ -11,13 +12,18 @@
       </td>
     </tr>
     <tr>
-    <td>
+<td>
     <a href="index.html">
       <button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
 <td>
-  <a href="page 2
+  <a href="page 2>
+    <button style="height:150px; width 640px"><b>Button 2</b></button>
 
+</td>
+<td>
+  <a href="page 3>
+    <button style="height:150px; width 640px"><b>Button 2</b></button>
 </td>
     </tr>
   </table>  
