--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
 <td>
-  <a href="page 2>
+  <a href="page2.html>
     <button style="height:150px; width 640px"><b>Button 2</b></button>
 
 </td>
 <td>
-  <a href="page 3>
+  <a href="page3.html>
     <button style="height:150px; width 640px"><b>Button 3</b></button>
 </td>
     </tr>
