--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </td>
 <td>
   <a href="page2.html>
-    <button style="height:150px; width 640px"><b>Button 2</b></button>
+    <button style="height:150px; width:640px"><b>Button 2</b></button>
 
 </td>
 <td>
   <a href="page3.html>
-    <button style="height:150px; width 640px"><b>Button 3</b></button>
+    <button style="height:150px; width:640px"><b>Button 3</b></button>
 </td>
     </tr>
   </table>  
