--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
       <link rel="stylesheet" href="style.css> 
   </head> 
 <body>Welcome to the best website in the world
-  table { border=1px;
-}
-            
+  <table border=1px>
     <tr>
       <td coldspan= "3">
         <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
