--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Best Website in the world</title>
+      <link rel="stylesheet" href="style.css> 
+  </head> 
+<body>Welcome to the best website in the world
