--- a/page2.html
+++ b/page2.html
@@ -5,3 +5,10 @@
       <link rel="stylesheet" href="style.css> 
   </head> 
 <body>Welcome to the best website in the world
+    <a href="page2.html">
+
+
+
+
+
+    <h1> <b> Page 2 </b></h1>
