--- a/page2.html
+++ b/page2.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Best Website in the world</title>
-      <link rel="stylesheet" href="style.css> 
-  </head> 
-<body>Welcome to the best website in the world
+<body>
     <a href="page2.html">
+<button class="btn">button 2</button>
+</body>
 
-
-
-
-
-    <h1> <b> Page 2 </b></h1>
+  <h1> <b> Page 2 </b></h1>
