--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <button style="height:150px; width:640px"><b>Button 3</b></button>
 </td>
     </tr>
+<tr>   
+   <td colspan="3">
+<h1> <b>homepage</b></h1>
+   </td>
+</tr> 
   </table>  
 </body>
 </html>
