--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <title>Best Website in the world</title>
-      <link rel="stylesheet" href="style.css> 
+      <link rel="stylesheet" href="styles.css> 
   </head> 
 <body>Welcome to the best website in the world
-  <table border=1px>
+  <table border="1">
     <tr>
-      <td coldspan= "3">
+      <td colspan= "3">
         <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
       </td>
     </tr>
