--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 <body>Welcome to the best website in the world
   <table border="1">
     <tr>
-      <td colspan= "3">
+      <td colspan="3">
         <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
       </td>
     </tr>
     <tr>
 <td>
     <a href="index.html">
-      <button style="height:150px; width:640px"><b>Button 1</b></button>
+      <button style="height:150px;width:640px"><b>Button 1</b></button>
 </td>
 <td>
-  <a href="page2.html>
-    <button style="height:150px; width:640px"><b>Button 2</b></button>
+  <a href="page2.html">
+    <button style="height:150px;width:640px"><b>Button 2</b></button>
 
 </td>
 <td>
-  <a href="page3.html>
-    <button style="height:150px; width:640px"><b>Button 3</b></button>
+  <a href="page3.html">
+    <button style="height:150px;width:640px"><b>Button 3</b></button>
 </td>
     </tr>
 <tr>   
