--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
     </tr>
     <tr>
 <td>
-    <a href="index.html">
-      <button style="height:150px;width:640px"><b>Button 1</b></button>
+    <a href="index.html"> Button 1 </a>
 </td>
 <td>
-  <a href="page2.html">
-    <button style="height:150px;width:640px"><b>Button 2</b></button>
-
+  <a href="page2.html"> Button 2 </a>
 </td>
 <td>
-  <a href="page3.html">
-    <button style="height:150px;width:640px"><b>Button 3</b></button>
+  <a href="page3.html"> Button 3 </a>
 </td>
     </tr>
 <tr>   
