--- a/page3.html
+++ b/page3.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Best Website in the world</title>
+      <link rel="stylesheet" href="styles.css> 
+  </head> 
+<body>Welcome to the best website in the world
+  <table border="1">
+    <tr>
+      <td colspan="3">
+        <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
+      </td>
+    </tr>
+    <tr>
+<td>
+    <a href="index.html"> Button 1 </a>
+</td>
+<td>
+  <a href="page2.html"> Button 2 </a>
+</td>
+<td>
+  <a href="page3.html"> Button 3 </a>
+</td>
+    </tr>
+<tr>   
+   <td colspan="3">
+<h1> <b>Page 3</b></h1>
+   </td>
+</tr> 
+  </table>  
+</body>
+</html>
