--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Best Website in the world</title>
-      <link rel="stylesheet" href="styles.css> 
+      <link rel="stylesheet" href="styles.css"> 
   </head> 
 <body>Welcome to the best website in the world
   <table border="1">
@@ -13,7 +13,7 @@
     </tr>
     <tr>
 <td>
-    <a href="index.html"> Button 1 </a>
+    <a href="index.html"> Button 1 1</a>
 </td>
 <td>
   <a href="page2.html"> Button 2 </a>
@@ -25,8 +25,8 @@
 <tr>   
    <td colspan="3">
 <h1> <b>homepage</b></h1>
-    </tr> 
-   </td>
+    </td> 
+   </tr>
   </table>
 </body>
 </html>
