--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Best Website in the world</title>
       <link rel="stylesheet" href="styles.css"> 
   </head> 
-<body>Welcome to the best website in the world
+<body>
   <table border="1">
     <tr>
       <td colspan="3">
@@ -13,7 +13,7 @@
     </tr>
     <tr>
 <td>
-    <a href="index.html"> Button 1 1</a>
+    <a href="index.html"> Button 1 </a>
 </td>
 <td>
   <a href="page2.html"> Button 2 </a>
