--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <tr>
 <td>
     <a href="index.html"> Button 1 </a>
+<button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
 <td>
   <a href="page2.html"> Button 2 </a>
+<button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
 <td>
   <a href="page3.html"> Button 3 </a>
+<button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
     </tr>
 <tr>   
