--- a/page2.html
+++ b/page2.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Best Website in the world</title>
-      <link rel="stylesheet" href="styles.css> 
+      <link rel="stylesheet" href="styles.css"> 
   </head> 
-<body>Welcome to the best website in the world
+<body>
   <table border="1">
     <tr>
       <td colspan="3">
@@ -14,19 +14,22 @@
     <tr>
 <td>
     <a href="index.html"> Button 1 </a>
+<button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
 <td>
   <a href="page2.html"> Button 2 </a>
+<button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
 <td>
   <a href="page3.html"> Button 3 </a>
+<button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
     </tr>
 <tr>   
    <td colspan="3">
-<h1> <b>Page 2</b> </h1>
-   </td>
-</tr> 
-  </table>  
+<h1> <b>homepage</b></h1>
+    </td> 
+   </tr>
+  </table>
 </body>
 </html>
