--- a/page3.html
+++ b/page3.html
@@ -13,16 +13,16 @@
     </tr>
     <tr>
 <td>
-    <a href="index.html"> Button 1 </a>
+    <a href="index.html">
 <button style="height:150px; width:640px"><b>Button 1</b></button>
 </td>
 <td>
-  <a href="page2.html"> Button 2 </a>
-<button style="height:150px; width:640px"><b>Button 1</b></button>
+  <a href="page2.html"> 
+<button style="height:150px; width:640px"><b>Button 2</b></button>
 </td>
 <td>
-  <a href="page3.html"> Button 3 </a>
-<button style="height:150px; width:640px"><b>Button 1</b></button>
+  <a href="page3.html">
+<button style="height:150px; width:640px"><b>Button 3</b></button>
 </td>
     </tr>
 <tr>   
