--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Best Website in the world</title>
+    <title>Reducing Impact on the Environment</title>
       <link rel="stylesheet" href="styles.css"> 
   </head> 
 <body>
