--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Best Website in the world</title>
+    <title>Harmful Effects</title>
       <link rel="stylesheet" href="styles.css"> 
   </head> 
 <body>
