--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Best Website in the world</title>
+    <title>Environmental Impact of Computer Use</title>
       <link rel="stylesheet" href="styles.css"> 
   </head> 
 <body>
   <table border="1">
     <tr>
       <td colspan="3">
-        <img src="Environment Day.png" alt=" " width="1920" height="450">
+        <img src="Clothing Company GoDaddy Store Image.png" alt="Environmental Impact of Computer Use" width="1920" height="450">
       </td>
     </tr>
     <tr>
