--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <tr>
 <td>
     <a href="index.html">
-<button style="height:150px; width:640px"><b>Button 1</b></button>
+<button style="height:150px; width:640px"><b>Home</b></button>
 </td>
 <td>
   <a href="page2.html"> 
-<button style="height:150px; width:640px"><b>Button 2</b></button>
+<button style="height:150px; width:640px"><b>Reducing Impact on the Environment</b></button>
 </td>
 <td>
   <a href="page3.html">
-<button style="height:150px; width:640px"><b>Button 3</b></button>
+<button style="height:150px; width:640px"><b>Harmful Effects</b></button>
 </td>
     </tr>
 <tr>   
