--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
   <table border="1">
     <tr>
       <td colspan="3">
-        <img src="Clothing Company GoDaddy Store Image.png" alt=" The best website in the world!" width="1920" height="450">
+        <img src="Environment Day.png" alt=" Reducing Impact on the Environment" width="1920" height="450">
       </td>
     </tr>
     <tr>
