--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,8 @@
     <tr>
 <td>
     <a href="index.html">
+<button style="height:150px; width:640px"><b>Home</b></button>
+</td>
 </td>
 <td>
   <a href="page2.html"> 
