--- a/page2.html
+++ b/page2.html
@@ -16,9 +16,9 @@
     <a href="index.html">
 <button style="height:150px; width:640px"><b>Home</b></button>
 </td>
-</td>
 <td>
-  <a href="page2.html"> 
+  <a href="page3.html">
+<button style="height:150px; width:640px"><b>Harmful Effects</b></button>
 </td>
     </tr>
 <tr>   
