--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,8 @@
       </td>
     </tr>
     <tr>
-      <td></td>
+      <h1>Reducing Impact on the Environment</h1>
+        <h2>How can we minimize the impact of computer device production on the environment?</h2>
 
     
     <tr>
