--- a/page2.html
+++ b/page2.html
@@ -15,6 +15,13 @@
       <td>
         <h1>Reducing Impact on the Environment</h1>
           <h2>How can we minimize the impact of computer device production on the environment?</h2>
+            <p>
+             <ul>
+              <li><b>Change:</b>We can minimize the impact in many different ways. One way to do it is to use resources more efficiently. We can try to make computers using better design tactics to reduce the materials used. </li>
+              <li><b>Use less:</b>Another way is to only purchase the essential things you need instead of buying more unnecessary things.</li>
+              <li><b>Re-use reduce recycle:</b>Another way we can help is to recycle and reuse. When we are done with the components we should recycle them properly so they don't end up in the wrong places hurting the environment. Another way is to only purchase the essential things you need instead of buying more and unnecessary things.</li>
+             </ul> 
+            </p>
       </td>
     <tr>
         <td>
