--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <table border="1">
     <tr>
       <td colspan="3">
-        <img src="World Environment Day2022 Banner .png" alt="Environmental Impact of Computer Use" width="1920" height="450">
+        <img src="impact.png" alt="Environmental Impact of Computer Use" width="1920" height="450">
       </td>
     </tr>
     <tr>
