--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,7 @@
   <table border="1">
     <tr>
       <td colspan="2">
-         <img src="Environment Day.png" alt=" Reducing Impact on the Environment" width="1600" height="450">
+         <img src="Harmful.png.png" alt=" Reducing Impact on the Environment" width="1600" height="450">
       </td>
     </tr>
     <tr>
