--- a/page3.html
+++ b/page3.html
@@ -27,8 +27,8 @@
      <td>
       <a href="index.html">
        <button style="height:100px; width:590px"><b>Home</b></button>
-      <a href="page3.html">
-       <button style="height:100px; width:590px"><b>Harmful Effects</b></button>
+      <a href="page2.html"> 
+       <button style="height:150px; width:640px"><b>Reducing Impact on the Environment</b></button>
      </td>
     </tr>
   </table>
