--- a/page3.html
+++ b/page3.html
@@ -13,15 +13,19 @@
     </tr>
     <tr>
       <td>
-        <h1>Reducing Impact on the Environment</h1>
-          <h2>How can we minimize the impact of computer device production on the environment?</h2>
+        <h1>Harmful Effects</h1>
             <p>
-             <ul>
-              <li><b>Change:</b>We can minimize the impact in many different ways. One way to do it is to use resources more efficiently. We can try to make computers using better design tactics to reduce the materials used. </li>
-              <li><b>Use less:</b>Another way is to only purchase the essential things you need instead of buying more unnecessary things.</li>
-              <li><b>Re-use reduce recycle:</b>Another way we can help is to recycle and reuse. When we are done with the components we should recycle them properly so they don't end up in the wrong places hurting the environment. Another way is to only purchase the essential things you need instead of buying more and unnecessary things.</li>
-             </ul> 
-            </p>
+             <ul>            
+           <h2>What are the environmental consequences of computer device production?</h2>
+           <li><b>E-waste:</b>An environmental consequence is E-waste, as computer parts get old or break they tend to be thrown away, and they then end up in landfills. As these components sit there, they release hazardous substances into the earth.</li> 
+           <li><b>Too much resources:</b>You don't understand how many resources are used as these computers are produced. On average a computer uses over 400 gallons of water and over 30 minerals. Remember that these natural resources are not being reused and they are all limited.</li>
+           <h2>How does computer use harm the environment?</h2>
+           <li><b>Energy consumption:</b>As computers run every day, consider the amount of energy used worldwide by everyone with a computer. The estimated global data centre electricity consumption in 2022 was 240-340 TWH^1.</li>
+           <li><b>E-Waste:</b>As computers are getting thrown away, they sit in landfills which leads to heavy metal contamination. There's lead, mercury and cadmium in computers and if they leak out into the ground it will affect the environment.</li>
+           <h2>What are the negative effects of computer device disposal?</h2>
+           <li><b>Toxic chemicals:</b>They end up in landfills, and as the components sit there, they leak toxic chemicals into the soil which affects the crops. When animals eat these crops they become affected, and then we eat the animals, and so on.</li>
+          </ul> 
+         </p>
       </td>
     <tr>
      <td>
